styles/mainStyles.css
/* ... */
 .member-spotlight-grid {
    display: grid;
    grid-template-columns: 1fr 375px;
    column-gap: 12rem;
 }

 .member-spotlight-questions div {
    padding-bottom: 28px;
 }

 .member-question-text {
    font-size: 1.1rem;
    font-style: italic;
    font-weight: 300;
    color: var(--clr-text-200);
 }

 .member-album-list,
 .member-answer-text {
    margin-left: 32px;
    margin-top: 8px;
    font-size: 1.2rem;
    font-weight: 400;
    color: var(--clr-text-100);
 }

 @media screen and (max-width: 1300px) {
    .member-spotlight-grid {
        display: grid;
        grid-template-columns: 1fr 350px;
        column-gap: 5rem;
     }
 }

 @media screen and (max-width: 1000px) {
    .member-spotlight-grid {
        grid-template-columns: 1fr 350px;
     }
 }

 @media screen and (max-width: 800px) {
    .spotlight-member-info {
        grid-template-columns: 100px 1fr;
        column-gap: 1.3em;
    }

    .spotlight-member-info img {
        width: 100px;
        height: auto;
    }

    .spotlight-member-info h4 span:nth-child(1) {
        font-size: clamp(1.1rem, 1.7vw + .2rem, 1.5rem);
    }
    
    .spotlight-member-info h4 span:nth-child(2) {
        font-size: clamp(1.3rem, 3.2vw + .2rem, 2rem);
     }

    .member-spotlight-grid {
        grid-template-columns: 1fr;
        row-gap: 24px;
     }
 }

 @media screen and (max-width: 500px) {
    .spotlight-member-info {
        grid-template-columns: 75px 1fr;
        column-gap: 1.3em;
    }

    .spotlight-member-info img {
        width: 75px;
        height: auto;
    }

    .member-spotlight-questions div {
        padding-bottom: 16px;
     }

     .member-question-text {
        font-size: 1rem;
     }

     .member-album-list,
     .member-answer-text {
        margin-top: 4px;
        font-size: 1.1rem;
     }
 }
 /* End member spotlight section classes */

 /* Progfest classes */
 .progFest-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
    column-gap: 4rem;
    color: #ffffff;
    margin-top: 2rem;
 }

 @media screen and (max-width: 900px) {
    .progFest-grid {
        column-gap: 2rem;
    }
 }

 .progFest-grid p {
    color: var(--clr-text-100)
 }

 .progFest-grid img {
    width: 100%;
    height: auto;
    border-radius: 3px;
 }

 .progFest-essentials-container {
    margin-top: 2rem;
    background: #232323;
    padding: 1rem 2rem;
    border-radius: 3px;
 }

 .progFest-essentials-container h4 {
    position: relative;
    font-size: 1.8rem;
    font-weight: 300;
    color: var(--clr-main)
 }
 
 .progFest-essentials-container h4:after {
    content: "";
    position: absolute;
    bottom: -3px;
    left:0;
    height: 1px;
    width: 100%;
    background: var(--clr-main);
    opacity: .3;
 }
 
 .progFest-details-container {
    margin-top: 1.3rem;
 }

 .progFest-text-grid--performers {
    position: relative;
    display: grid;
    grid-template-columns: 150px 1fr;
    align-items: start;
    gap: 24px;
    padding-bottom: .7em;
 }

 .progFest-text-grid--performers:not(:last-child)::after {
    content: "";
    position: absolute;
    bottom: -3px;
    left:0;
    height: 1px;
    width: 100%;
    background: var(--clr-main);
    opacity: .3;
 }
 

 .progFest-text-grid {
    display: grid;
    grid-template-columns: 75px 1fr;
    align-items: start;
 }

 .progFest-text-grid--performers a {
    font-size: .9rem;
    color: var(--clr-text-200) !important;
    font-weight: 400;
 }
 
 
 .progFest-text-grid a {
    color: var(--clr-main);
 }
 
 .progFest-text-grid--performers + .progFest-text-grid--performers{
    margin-top: 1.5rem;
 }
 .progFest-text-grid + .progFest-text-grid {
    margin-top: 1rem;
 }

 .progFest-text-grid--performers h5 {
    font-size: .9rem;
    color: var(--clr-text-200) !important;
    font-weight: 400;

 }
 .progFest-text-grid h5 {
    font-size: 1rem;
    color: var(--clr-text-300);
    font-weight: 400;
 }

 .progFest-text-grid--performers p {
    font-size: .9rem;
    color: var(--clr-text-300) !important;
    font-weight: 400;
 }

 .progFest-text-grid p {
    font-size: 1rem;
    color: var(--clr-text-100);
    font-weight: 300;
 }

 @media screen and (max-width: 1000px) {
    .progFest-essentials-container h4 {
        font-size: clamp(1.2rem, 2vw + 10px, 1.8rem);
     }
 }

 @media screen and (max-width: 948px) {
    .progFest-grid--left {
        margin-top: 2rem;
    }
    
    .progFest-grid--right {
        order: -1;
    }
 }

 @media screen and (max-width: 716px) {
    .progFest-grid {
       margin-top: 1rem;
     }




}

 @media screen and (max-width: 400px) {
    .progFest-grid {
        grid-template-columns: 1fr;
     }

     .progFest-essentials-container {
        padding: 1rem 1rem;
     }  
}

.italics {
    font-style: italic;
}
/* End progfest container classes */

/* Footer */
.main-footer-wrapper {
    background: var(--clr-black);
}

.main-footer-container {
    width: calc(100% - 4rem);
    max-width: var(--max-width);
    margin: 0 auto;
    color: var(--clr-main);
    padding-bottom: 1em;
}

.social-media-icons {
    display: flex;
    justify-content: space-evenly;
    padding-top: 4rem;
    padding-bottom: 4rem;
    margin: 0 auto;
    width: 30%;
}

.social-icon a {
    padding: 1em 1em;
    border-radius: 100%;
}

.main-footer-container p {
    text-align: center;
    font-size: 1rem;
    padding-bottom: .2rem;
    letter-spacing: .1em;
}

.main-footer-container p span {
    padding-right: .3em
}

@media screen and (max-width: 650px){
    .social-media-icons {
        width: 100%;
    }
}

@media screen and (max-width: 450px){
    .social-media-icons {
        padding-top: 2rem;
        padding-bottom: 2rem;
    }

    .main-footer-container p {
        text-align: center;
        font-size: .8rem;
    }
}
/* End footer */

